--- a/noaa_tides/manifest.json
+++ b/noaa_tides/manifest.json
@@ -2,6 +2,6 @@
   "domain": "noaa_tides",
   "name": "NOAA Tides",
   "documentation": "",
-  "requirements": ["noaa_coops"],
+  "requirements": ["noaa_coops>=0.1.8"],
   "codeowners": []
 }
