--- a/custom_components/noaa_tides/manifest.json
+++ b/custom_components/noaa_tides/manifest.json
@@ -1,11 +1,11 @@
 {
   "version": "0.1.4",
   "domain": "noaa_tides",
-  "name": "NOAA Tides",
-  "requirements": ["noaa_coops>=0.1.9"],
+  "name": "NOAA Tides and Currents",
   "codeowners": [ '@jshufro' ],
   "documentation": "https://github.com/jshufro/home_assistant_noaa_tides",
   "issue_tracker": "https://github.com/jshufro/home_assistant_noaa_tides/issues",
+  "requirements": ["noaa_coops>=0.1.9"],
   "dependencies": [],
   "iot_class": "cloud_polling"
 }
