--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,31 +1,46 @@
+---
+# pre-commit autoupdate
+
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: requirements-txt-fixer
--   repo: https://github.com/psf/black
-    rev: 23.12.1
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: requirements-txt-fixer
+
+#  - repo: https://github.com/psf/black
+#    rev: 23.12.1
+#    hooks:
+#      - id: black
+#        args: [--config=pyproject.toml]
+
+  - repo: https://github.com/odwyersoftware/brunette
+    rev: 0.2.8
     hooks:
-    -   id: black
-        args: [--config=pyproject.toml]
--   repo: https://github.com/hadialqattan/pycln
+      - id: brunette
+        args: [--line-length=88, --single-quotes]
+
+
+  - repo: https://github.com/hadialqattan/pycln
     rev: v2.4.0
     hooks:
-    -   id: pycln
+      - id: pycln
         args: [--config=pyproject.toml]
--   repo: https://github.com/pycqa/isort
+
+  - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
-    -   id: isort
-        files: "\\.(py)$"
+      - id: isort
+        files: \.(py)$
         args: [--settings-path=pyproject.toml]
--   repo: https://github.com/dosisod/refurb
+
+  - repo: https://github.com/dosisod/refurb
     rev: v1.27.0
     hooks:
       - id: refurb
--   repo: https://github.com/asottile/pyupgrade
+
+  - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.0
     hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
